name: phong
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak
synopsis: A Pong clone.
description:
    TODO
category: Game

source-repository head
    type: git
    location: https://github.com/tfausak/phong

library
    default-language: Haskell2010

