name: phong
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak
synopsis: A Pong clone.
description:
    TODO
category: Game

source-repository head
    type: git
    location: https://github.com/tfausak/phong

library
    exposed-modules:
        Phong
    build-depends:
        base >=4.7 && <4.9,
        gloss >=1.9 && <1.10
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

executable phong
    main-is: Main.hs
    build-depends:
        base -any,
        phong -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -threaded -Wall

